anythingllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anythingllm
  namespace: anythingllm
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: anythingllm.k8s.cloud.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anythingllm
                port:
                  number: 80
